Common Bft forks schedule
Signed-off-by: Jason Frame <jasonwframe@gmail.com>